// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericField render() renders text as TextInput 1`] = `
<TextField
  disabled={false}
  formState="Ready"
  help={null}
  hideErrorMessage={false}
  key="field-name"
  label="field label*"
  name="field-name"
  required={true}
  type="text"
/>
`;

exports[`GenericField render() renders text with choices as SelectTextField 1`] = `
<SelectTextField
  choices={Array []}
  disabled={false}
  formState="Ready"
  help={null}
  hideErrorMessage={false}
  key="field-name"
  label="field label*"
  name="field-name"
  required={true}
  type="text"
/>
`;
